Fix initial transition and squishing of 11th card

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectColumn.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectColumn.css
@@ -55,6 +55,12 @@
     flex-shrink: 0;
 }
 
+.expanded-row-temp {
+    overflow-y: hidden;
+    /* measured from the height of an empty course card */
+    min-height: 220px;
+}
+
 #add-course-button {
     width: 100%;
 }
